[package]
name = "fuzz_parse_datetime"
version = "0.1.0"
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
rand = "0.8.5"
libfuzzer-sys = "0.4"
regex = "1.9.5"
chrono = { version="0.4", default-features=false, features=["std", "alloc", "clock"] }

[dependencies.parse_datetime]
path = "../"

[[bin]]
name = "fuzz_parse_datetime"
path = "fuzz_targets/parse_datetime.rs"
test = false
doc = false
