[package]
name = "fuzz_parse_datetime"
version = "0.2.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.7"
regex = "1.10.4"
chrono = { version="0.4", default-features=false, features=["std", "alloc", "clock"] }

[dependencies.parse_datetime]
path = "../"

[features]
debug = ["parse_datetime/debug"]

[[bin]]
name = "fuzz_parse_datetime"
path = "fuzz_targets/parse_datetime.rs"
test = false
doc = false
